--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Workshop pagina</title>
+        <title>Workshop pagina verandering</title>
     </head>
     <body>
         <section id="nav">
